Release/v11.2.5 (#1957)
* feat: implement gRPC client and service for collector management

* feat: remove unused GrpcInternalKeyInterceptor from collector service clients

* fix(module.service): return full response body instead of filtering AS_400 module

Signed-off-by: Manuel Abascal <mjabascal10@gmail.com>

* feat: add CollectorConfigDTO and unique server name validation

* feat: add CollectorConfigBuilder for constructing CollectorConfig from DTO

* feat: add CollectorGrpcService for managing collector operations via gRPC

* feat: update CollectorConfig validation and add CollectorService for gRPC integration

* feat: update CollectorValidatorService to use CollectorConfigDTO for validation

* feat: refactor UtmCollectorResource to use CollectorConfigDTO and CollectorOpsService

* feat: add logging to updateConfigurationKeys method in UtmModuleGroupConfigurationService

* feat: implement gRPC client and service for collector management

* feat: implement gRPC client and service for collector management

* fix(module.service): return full response body instead of filtering AS_400 module

Signed-off-by: Manuel Abascal <mjabascal10@gmail.com>

* feat: implement gRPC client and service for collector management

* feat: remove unused GrpcInternalKeyInterceptor from collector service clients

* feat: implement gRPC client and service for collector management

* feat: implement gRPC client and service for collector management

* feat: implement gRPC client and service for collector management

* feat: remove unused GrpcInternalKeyInterceptor from collector service clients

* feat: add CollectorConfigDTO and unique server name validation

* feat: add CollectorConfigBuilder for constructing CollectorConfig from DTO

* feat: add CollectorGrpcService for managing collector operations via gRPC

* feat: update CollectorConfig validation and add CollectorService for gRPC integration

* feat: update CollectorValidatorService to use CollectorConfigDTO for validation

* feat: r